Multi-link support
